--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@liveblocks/client": "^1.10.2",
     "@liveblocks/react": "^1.10.2",
     "@liveblocks/react-comments": "^1.10.2",
+    "@types/fabric": "^5.3.7",
+    "@types/uuid": "^9.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "fabric": "^5.3.0",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.354.0",
     "next": "14.1.3",
     "react": "^18",
